--- a/Lab 2/CMakeLists.txt
+++ b/Lab 2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab_2 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Lab_2 main.c)
+add_executable(recognition mainRecog.c recognizeEq.c recognizeEq.h scanner.c scanner.h)
